Refactor CarouselPage.tsx

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,10 @@
     padding-top: 10px;
     display: flex;
     justify-content: space-around;
-    height: 10vh;
+    align-items: center;
+    height: 12vh;
     background-color: #00568F;
+
 }
 
 .Icons-social  {
